--- a/index.html
+++ b/index.html
@@ -10,11 +10,15 @@
 </head>
 <body>
     <header></header>
-    <main> 
-        <h1>Olá,<strong> sou Mayara Martins</strong> enfermeira, é isso mesmo.</h1>
-        <p>Me apaixonei por criar produtos digitais após empreender na área de saúde, atualmente estudo para me tornar desenvolvedora Front-end com especialidade em React, HTML e CSS. Vamos conversar?</p>
-        <a href="https://www.linkedin.com/in/mayaranmartins/">LinkedIn</a>
-        <a href="https://github.com/mayaranm">GitHub</a>
+    <main class="apresentacao"> 
+        <section class="apresentacao__conteudo">
+        <h1 class="apresentacao__conteudo__titulo"> Olá,<strong class="titulo-destaque"> sou Mayara Martins</strong> enfermeira, é isso mesmo.</h1>
+        <p class="apresentacao__conteudo__texto"> Me apaixonei por criar produtos digitais após empreender na área de saúde, atualmente estudo para me tornar desenvolvedora Front-end com especialidade em React, HTML e CSS.</p>
+        <div class="apresentacao__links">
+         <a class="apresentacao__links__links" href="https://www.linkedin.com/in/mayaranmartins/">LinkedIn</a>
+         <a class="apresentacao__links__links" href="https://github.com/mayaranm">GitHub</a>
+        </div>
+        </section>
         <img src="Mayara3.png" alt="Foto da Mayara Martins">
     </main>
     <footer></footer>
